--- a/src/components/Formacion.astro
+++ b/src/components/Formacion.astro
@@ -48,7 +48,7 @@ const FORMACION = [
     description:
       "18/45 materias aprobadas, 4 en curso. Adquiriendo conocimientos sólidos en desarrollo de Software como Programacion orientada a objetos con patrones de diseño, bases de datos relacionales y otras áreas como álgebra, matemática, telecomunicaciones, redes.",
     image: "/projects/uade.jpeg",
-    tags: [TAGS.JAVA, TAGS.Python, TAGS.Spring, TAGS.SQL, TAGS.Git
+    tags: [TAGS.JAVA, TAGS.Python, TAGS.Spring, TAGS.SQL, TAGS.Git,
 ],
   },
   {
@@ -57,6 +57,7 @@ const FORMACION = [
       "Nivel B1 actualmente, estimo que para Julio 2025 alcanzaré un nivel B2.",
     image: "/projects/LEI.jpg",
     tags: [],
+    github: null
   },
   {
     title: "Spring Framework con Angular - Udemy",
@@ -64,6 +65,7 @@ const FORMACION = [
       "Estudiando el framework Spring para implementar en el proyecto Padel Para Todos y para el Front con Angular (competencia básica).",
     image: "/projects/udemy.png",
     tags: [TAGS.Angular, TAGS.JAVA, TAGS.Spring],
+    github: null,
   },
 ]
 ---
