--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -14,15 +14,13 @@ const EXPERIENCIE = [
     title: "Find Your Guide",
     company: "UADE",
     description:
-      "Realizando una aplicación para encontrar guías turísticos en todo el mundo, estamos utilizando Java, Spring Boot y SQL.",
-  },
+      "Realizando una aplicación para encontrar guías turísticos en todo el mundo, estamos utilizando Java, Spring Boot y SQL.",},
   {
     date: "Actualidad",
     title: "Padel Para Todos",
     company: "Freelance",
     description:
-      "Desarrollando una API REST para la organización de torneos de padel, pienso incluir todo el framework Spring y en el front Angular (aprendiendolo).",
-  },
+      "Desarrollando una API REST para la organización de torneos de padel, pienso incluir todo el framework Spring y en el front Angular (aprendiendolo).",},
 ]
 ---
 
