--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -8,15 +8,14 @@
   >
     <p>
       Me llamo Giuliano Politi, estudiante de 3er año de Ingeniería en Informática,
-      me gusta resolver problemas matemáticos y lógicos
-       <strong> y me especializo en el desarrollo de software Backend
+      me gusta resolver problemas matemáticos y lógicos y
+       <strong>  me especializo en el desarrollo de software Backend
        utilizando Java y Spring Boot</strong
       >.
     </p>
-
     <p>
       Poseo excelentes habilidades blandas, si bien no tengo experiencia laboral en el área, mi experiencia en otras
-      áreas como administración, me brindó el saber trabajar en equipo, soy creyente de que <strong
+      áreas como administración o la atención al público, me brindó el saber trabajar en equipo y buenas habilidades comunicativas, soy creyente de que <strong
         >de todas las personas se aprende algo.</strong
       >
     </p>
