--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -6,7 +6,7 @@ const EXPERIENCIE = [
     title: "Trilateración 2D",
     company: "UADE",
     description:
-      "Proyecto académico en Java y Spring Boot creando una API REST para encontrar un exoplaneta por medio de señales de 3 satélites (con Postman) que envían la distancia y recomponen un mensaje encriptado.",
+      "Proyecto académico en Java y Spring Boot. Creé una API REST para encontrar un exoplaneta por medio de señales de 3 satélites (con Postman) que envían la distancia y recomponen un mensaje encriptado.",
     link: "https://github.com/giulianopoliti/trilateration-2d-java",
   },
   {
@@ -20,7 +20,7 @@ const EXPERIENCIE = [
     title: "Padel Para Todos",
     company: "Freelance",
     description:
-      "Desarrollando una API REST para la organización de torneos de padel, pienso incluir todo el framework Spring y en el front Angular (aprendiendolo).",},
+      "Estoy desarrollando una API REST para gestionar torneos de pádel, utilizando el framework Spring e Hibernate para la base de datos SQL. En el frontend, planeo usar Angular, que estoy aprendiendo actualmente.",},
 ]
 ---
 
