--- a/src/components/Formacion.astro
+++ b/src/components/Formacion.astro
@@ -7,7 +7,8 @@ import Spring from "./icons/Spring.astro"
 import SQL from "./icons/SQL.astro"
 import Angular from "./icons/Angular.astro"
 import Git from "./icons/Git.astro"
-
+import Languaje from "./icons/Languaje.astro"
+import StarUML from "./icons/StarUML.astro"
 
 const TAGS = {
 
@@ -41,6 +42,16 @@ const TAGS = {
     class: "bg-[#003159] text-white",
     icon: Git,
   },
+  Languaje: {
+    name: "B1",
+    class: "bg-[#003159] text-white",
+    icon: Languaje,
+  },
+  StarUML: {
+    name: "UML",
+    class: "bg-[#003159] text-white",
+    icon: StarUML,
+  },
 }
 const FORMACION = [
   {
@@ -48,7 +59,7 @@ const FORMACION = [
     description:
       "18/45 materias aprobadas, 4 en curso. Adquiriendo conocimientos sólidos en desarrollo de Software como Programacion orientada a objetos con patrones de diseño, bases de datos relacionales y otras áreas como álgebra, matemática, telecomunicaciones, redes.",
     image: "/projects/uade.jpeg",
-    tags: [TAGS.JAVA, TAGS.Python, TAGS.Spring, TAGS.SQL, TAGS.Git,
+    tags: [TAGS.JAVA, TAGS.Python, TAGS.Spring, TAGS.SQL, TAGS.Git, TAGS.StarUML
 ],
   },
   {
@@ -56,8 +67,7 @@ const FORMACION = [
     description:
       "Nivel B1 actualmente, estimo que para Julio 2025 alcanzaré un nivel B2.",
     image: "/projects/LEI.jpg",
-    tags: [],
-    github: null
+    tags: [TAGS.Languaje]
   },
   {
     title: "Spring Framework con Angular - Udemy",
@@ -65,18 +75,17 @@ const FORMACION = [
       "Estudiando el framework Spring para implementar en el proyecto Padel Para Todos y para el Front con Angular (competencia básica).",
     image: "/projects/udemy.png",
     tags: [TAGS.Angular, TAGS.JAVA, TAGS.Spring],
-    github: null,
   },
 ]
 ---
 
 <div class="flex flex-col gap-y-16">
   {
-    FORMACION.map(({ image, title, description, tags, github }) => (
+    FORMACION.map(({ image, title, description, tags}) => (
     <article class="flex flex-col space-x-0 space-y-8 group md:flex-row md:space-x-8 md:space-y-0">
   <div class="w-full md:w-1/2">
     <div class="relative flex flex-col items-center col-span-6 row-span-5 gap-8 transition duration-500 ease-in-out transform shadow-xl overflow-clip rounded-xl sm:rounded-xl md:group-hover:-translate-y-1 md:group-hover:shadow-2xl lg:border lg:border-gray-800 lg:hover:border-gray-700 lg:hover:bg-gray-800/50">
-      <img alt="Imagen del proyecto" class="object-top w-full h-40 md:h-48 transition duration-500 sm:h-full md:scale-100 md:group-hover:scale-95" loading="lazy" src={image} />
+      <img alt="Imagen del proyecto" class="object-top w-full h-40 md:h-48 transition duration-500 sm:h-full md:scale-100 md:group-hover:scale-110" loading="lazy" src={image} />
     </div>
   </div>
 
@@ -97,19 +106,7 @@ const FORMACION = [
             </li>
           ))}
         </ul>
-
       <div class="mt-2 text-gray-700 dark:text-gray-400">{description}</div>
-      <footer class="flex items-end justify-start mt-4 gap-x-4">
-          {github && (
-            <LinkButton href={github}>
-              <GitHub class="size-6" />
-              Code
-            </LinkButton>
-          )}
-          
-        </footer>
-    </div>
-  </div>
 </article>
     ))
   }
