--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,6 +3,11 @@ import ThemeToggle from "./ThemeToggle.astro"
 import Sun from "./icons/Sun.astro"
 
 const navItems = [
+{
+    title: "Sobre mí",
+    label: "sobre-mi",
+    url: "/#sobre-mi",
+  },
   {
     title: "Proyectos",
     label: "proyectos",
@@ -14,9 +19,9 @@ const navItems = [
     url: "/#formacion",
   },
   {
-    title: "Sobre mí",
-    label: "sobre-mi",
-    url: "/#sobre-mi",
+    title: "Experiencia",
+    label: "Experiencia",
+    url: "/#experiencia",
   },
   {
     title: "Contacto",
