Commit sin errores

--- a/src/components/Experiencia.astro
+++ b/src/components/Experiencia.astro
@@ -55,7 +55,7 @@ const experiences = [
             {Array.isArray(exp.description) ? (
               <ul>
                 {exp.description.map((desc, idx) => (
-                  <li key={idx} class="mt-2 text-gray-700 dark:text-gray-400 mb-4">{"- " + desc}</li>
+                    <li class="mt-2 text-gray-700 dark:text-gray-400 mb-4">{"- " + desc}</li>
                 ))}
               </ul>
             ) : (
