Commit definitivo, producto terminado

--- a/src/components/Experiencia.astro
+++ b/src/components/Experiencia.astro
@@ -44,7 +44,7 @@ const experiences = [
     </div>
     <div class="grid gap-4 mb-6 lg:mb-16 md:grid-cols-1">
       {experiences.map((exp, index) => (
-        <div key={index} class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700 transition duration-500 ease-in-out transform hover:-translate-y-1 hover:shadow-2xl">
+        <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700 transition duration-500 ease-in-out transform hover:-translate-y-1 hover:shadow-2xl">
           <div class="overflow-hidden sm:overflow-visible">
             <img class="aspect-square w-full sm:w-36" src={exp.image} alt={`Imagen de ${exp.company}`} />
           </div>
