--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Formacion2 from "@/components/icons/Formacion2.astro"
 ---
 
 <Layout
-  title="Portafolio de Giuliano Politi"
+  title="Porfolio de Giuliano Politi"
   description="Backend Developer"
 >
 
