--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -15,7 +15,7 @@
     </p>
     <p>
       Poseo excelentes habilidades blandas, si bien no tengo experiencia laboral en el área, mi experiencia en otras
-      áreas como administración o la atención al público, me brindó el saber trabajar en equipo y buenas habilidades comunicativas, soy creyente de que <strong
+      áreas como administración la atención al público o el deporte, me brindó el saber trabajar en equipo y buenas habilidades comunicativas, soy creyente de que <strong
         >de todas las personas se aprende algo.</strong
       >
     </p>
