--- a/src/components/Experiencia.astro
+++ b/src/components/Experiencia.astro
@@ -5,6 +5,14 @@ import { forEachChild } from "typescript";
 
 
 const experiences = [
+{
+    company: 'Alvear Club',
+    role: 'Entrenador de Tenis de Mesa',
+    image: '/projects/alvear2.jpg',
+    date: 'Actualidad',
+    description: ['Entreno a jugadores federados tanto clases grupales como individuales.'],
+    URL: "https://www.instagram.com/alvearclubtdm/" 
+  },
   {
     company: 'Kiosco 441',
     role: 'Encargado',
@@ -29,6 +37,7 @@ const experiences = [
     description: ['Atendí llamadas de la línea de emergencias',  'Resolví asuntos administrativos'],
     URL: "https://www.instagram.com/swissmedicalgroup/?hl=es-la" 
   },
+
 ];
 
 ---
