--- a/src/components/Formacion.astro
+++ b/src/components/Formacion.astro
@@ -94,7 +94,7 @@ const FORMACION = [
       {title}
     </h3>
     <div class="flex flex-wrap mt-2">
-      <ul class="flex flex-row mb-2 gap-x-2">
+      <ul class="flex flex-wrap mb-2 gap-x-2">
           {tags.map((tag) => (
             <li>
               <span
