--- a/src/components/Formacion.astro
+++ b/src/components/Formacion.astro
@@ -98,7 +98,7 @@ const FORMACION = [
           {tags.map((tag) => (
             <li>
               <span
-                class={`flex gap-x-2 rounded-full text-xs ${tag.class} py-1 px-2 `}
+                class={`flex gap-x-2 rounded-full text-xs ${tag.class} py-1 px-2 my-1`}
               >
                 <tag.icon class="size-4" />
                 {tag.name}
