Corregi educacion en unlam

--- a/src/components/Formacion.astro
+++ b/src/components/Formacion.astro
@@ -85,7 +85,7 @@ const FORMACION = [
   {
     title: "Licenciatura en Comercio Internacional",
     description:
-      "Carrera abandonada, 12/40 materias. Me dí cuenta que lo único que me atraía era el contenido práctico.",
+      "Carrera abandonada, 12/40 materias. Me dí cuenta que lo único que me atraía era el contenido práctico, pero me brindó bases matemáticas que me son útiles hoy.",
     image: "/projects/unlam.jpg",
     tags: [TAGS.Matematica],
   },
